--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -6,20 +6,45 @@
 
 html{
     font-size: 62.5%;
+    background-color: #f9f9f9;
 }
 
-/ Estilização do Cabecalho */
+/* Estilização do Cabecalho */
 
 header {
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.05);
 
     .texto-meningite {
-        justify-content: left;
-        margin-left: 2rem;
+        padding: 1rem;
+    }
 
-        .menu-nav {
-            
-            justify-content: right;
+    .menu-nav{
+        display: flex;
+        gap: 3rem;
+
+        a {
+            text-decoration: none;
+            color: #434343;
+            font-weight: 600;
+            font-size: 1.4rem;
+
+            &:hover{
+                color: black;
+                font-weight: bold;
+            }
         }
     }
+}
+
+
+
+/* Estilizando o conteudo principal */
+
+main {
+    margin-top: 1rem;
+    background: #ffffff;
 }
