--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -47,4 +47,96 @@ header {
 main {
     margin-top: 1rem;
     background: #ffffff;
+
+    .o-que-e {
+        display: flex;
+        padding-top: 4rem;
+
+        .texto {
+            font-size: 1rem;
+            margin: 2rem 10rem 0rem 10rem;
+            
+            h1{
+                display: flex;
+                font-size: 4rem;
+                justify-content: center;
+            }
+
+            p{
+                display: flex;
+                font-size: 1.5rem;
+                margin: 3rem;
+            }
+        }
+
+        .brain-img{
+            margin-right: 10rem;
+            margin-top: 2rem;
+        }
+    }
+
+    .sec-botao {
+        display: flex;
+        align-items: center;
+        margin: 8rem;
+      
+        .botao-ajuda {
+            button {
+                background-color: #476FBC;
+                color: #ffffff;
+                padding: 10px 20px;
+                font-size: 2rem;
+                border: none;
+                border-radius: 100px;
+                cursor: pointer;
+                transition: background-color 0.3s ease;
+      
+                &:hover {
+                background-color: #334d79;
+                }
+            }
+        }
+    }
+
+    .tipos {
+        display: flex;
+        background-color: #476FBC;
+        color: rgb(255, 255, 255);
+    
+        .headache-img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    
+        .texto {
+            font-size: 1rem;
+            margin: 2rem 10rem 0rem 10rem;
+    
+            h1 {
+                display: flex;
+                font-size: 4rem;
+                justify-content: center;
+            }
+    
+            p {
+                display: flex;
+                font-size: 1.5rem;
+                margin: 3rem;
+            }
+        }
+
+        .texto-secundario{
+            margin-left: 3rem;
+
+            ul{
+                margin-left: 5rem;
+
+                b{
+                    margin-right: 2rem;
+                    
+                }
+            }
+        }
+    }
 }
