--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -90,6 +90,7 @@ main {
                 border-radius: 100px;
                 cursor: pointer;
                 transition: background-color 0.3s ease;
+                margin-left: 30rem;
       
                 &:hover {
                 background-color: #334d79;
@@ -137,6 +138,83 @@ main {
                     
                 }
             }
+        }
+    }
+}
+
+/* Estilização do Rodapé */
+
+footer{
+    display: flex;
+    justify-content: center;
+    gap: 20rem;
+    margin-top: 3rem;
+    background-color: #6d98c6;
+
+    .conteudo-rodape {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .redes-sociais-logos {
+            .redes-sociais-nav {
+                a {
+                    max-width: 3rem;
+                    height: auto;
+                    margin: 0rem 2rem 1rem 2rem;
+                    
+                    &:not(:last-child) {
+                        margin-right: 10px;
+                    }
+                }
+            }
+        }
+
+        .copyright{
+            margin-top: 2rem;
+            font-size: 1.4rem;
+        }
+    }
+
+    .integrantes{
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        gap: 2rem;
+
+        .membros{
+            display: flex;
+            flex-direction: column;
+            gap: 0.4rem;
+
+            h2{
+                font-size: 2rem;
+            }
+
+            p{
+                display: flex;
+                flex-direction: column;
+                font-size: 1.4rem;
+                gap: 2rem;
+            }
+        }
+        
+        .turma{
+            display: flex;
+            align-items: center;
+
+            h2{
+                font-size: 2rem;
+                margin-right: 2rem;
+            }
+
+            p{
+                display: flex;
+                flex-direction: column;
+                font-size: 1.4rem;
+                gap: 2rem;
+            } 
         }
     }
 }
